--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,12 @@
     font-weight: 400;
     font-style: normal;
 }
+
+.btn-anterior, .btn-siguiente {
+    background: #0dcaf0;
+}
+
+.btn-anterior:hover, .btn-siguiente:hover {
+    background-color: #fff;
+    border: 4px solid #0dcaf0;
+}
